 - Create database, pid and log dirs during daemon startup if necessary
 - Update ownership of database, log and pid files if needed during daemon
   startup if started as root and configured to change process user and group
 - Remove cron update related example files and documentation, the cron
   update method should be considered as deprecated


1.11 / 1-Jun-11

 - Fix: Memory allocation was miscalculated when creating interface list from
   /sys/class/net when /proc/net/dev wasn't available which in turn could
   crash the daemon
 - Fix: Daemon database cache could remain empty after a -HUP signal
 - Fix: Don't make temp directory in vnstat.cgi writable for everyone
 - Import GNU/kFreeBSD support from Debian
   (#608963, patch by Mats Erik Andersson)
 - Remove usage of GNU only '-D' option for install for BSD in Makefile
 - The daemon now automatically creates databases for available interfaces
   if no databases are found during startup


1.10 / 2-Jan-10

 - Fix: Buffer overflow was possible in hourly image output when RateUnit=1
   and HourlyRate=1
 - Fix: Minor memory leak was possible in the handling of HUP signal in daemon
 - Fix: Graphical elements weren't correctly aligned in summary image
   when header wasn't visible (-nh)
 - Fix: --delete didn't work
 - Possibility to merge statistics from several databases and save
   the end result to a new database (--mergesaved)
 - Added validation of database cache in daemon in order to be more robust
   in case of system memory corruption
 - Support for --style to -l (live mode)
 - Alternative print mode to -l (live mode) with optional parameter
 - Present options and elements in man pages in alphabetical order
 - Code cleanup


1.9 / 12-Sep-09

 - Fix: TrafficlessDays configuration option was enabled when set to zero
   when it should have been disabled
 - Fix: MonthRotate setting was getting ignored for the first month if 
   the database is created when day of month < MonthRotate value