@@ -3,7 +3,7 @@
 
 typedef struct {
 	int update, query, newdb, reset, sync, merged, savemerged, import;
-	int active, files, force, cleartop, rebuildtotal, traffic;
+	int create, active, files, force, cleartop, rebuildtotal, traffic;
 	int livetraffic, defaultiface, delete, livemode;
 	char interface[32], dirname[512], nick[32], filename[512];
 	char definterface[32], cfgfile[512], *ifacelist;
@@ -21,6 +21,7 @@ void handledelete(PARAMS *p);
 void handlecleartop10(PARAMS *p);
 void handlerebuildtotal(PARAMS *p);
 void handleenabledisable(PARAMS *p);
+void handlecreate(PARAMS *p);
 void handleupdate(PARAMS *p);
 void handleshowdatabases(PARAMS *p);
 void handletrafficmeters(PARAMS *p);
